Unify main quick link styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <nav class="site-nav">
       <a href="interpret.html">해독</a>
-      <a href="fortune.html">운세</a>
+      <a href="fortune.html">12간지</a>
+      <a href="astro.html">별자리</a>
       <a href="#symbols">상징서</a>
       <a href="#ritual">의식</a>
       <a href="#guide">가이드</a>
@@ -44,8 +45,9 @@
           예언이 아닌, 내면의 그림자를 비추는 의식적 기록입니다.
         </p>
         <div class="hero-actions">
-          <a class="btn primary" href="interpret.html">몽상 기록 시작</a>
-          <a class="btn ghost" href="fortune.html">오늘의 12간지 운세</a>
+          <a class="btn hero-link" href="interpret.html">몽상 기록 시작</a>
+          <a class="btn hero-link" href="fortune.html">오늘의 12간지 운세</a>
+          <a class="btn hero-link" href="astro.html">오늘의 별자리 운세</a>
         </div>
       </div>
       <div class="hero-card reveal">
