--- a/interpret.html
+++ b/interpret.html
@@ -15,16 +15,18 @@
   <div class="orb orb-b" aria-hidden="true"></div>
 
   <header class="site-header">
-    <div class="brand">
+    <a class="brand" href="index.html" aria-label="몽문서 메인으로">
       <span class="brand-mark">몽</span>
       <div>
         <p class="brand-title">몽문서</p>
         <p class="brand-sub">잠의 의식을 해독하는 작은 서고</p>
       </div>
-    </div>
+    </a>
     <nav class="site-nav">
+      <a href="index.html">메인</a>
       <a href="interpret.html">해독</a>
-      <a href="fortune.html">운세</a>
+      <a href="fortune.html">12간지</a>
+      <a href="astro.html">별자리</a>
       <a href="index.html#symbols">상징서</a>
       <a href="index.html#ritual">의식</a>
       <a href="index.html#guide">가이드</a>
