Add quality content and guidance sections

--- a/astro.html
+++ b/astro.html
@@ -64,6 +64,26 @@
         </div>
       </div>
     </section>
+    <section class="guide reveal">
+      <div class="section-title">
+        <h2>별자리 운세 안내</h2>
+        <p>별자리는 참고용 흐름을 제공합니다. 해석은 상황에 맞게 적용하세요.</p>
+      </div>
+      <div class="guide-grid">
+        <article>
+          <h3>오늘의 흐름</h3>
+          <p>운세는 하루 단위로 갱신되며, 단기 방향성에 초점을 둡니다.</p>
+        </article>
+        <article>
+          <h3>균형 잡기</h3>
+          <p>좋은 흐름이라도 무리하지 말고 균형을 지키는 것이 중요합니다.</p>
+        </article>
+        <article>
+          <h3>자기 선택</h3>
+          <p>결정은 스스로의 판단이 우선입니다. 운세는 보조 도구입니다.</p>
+        </article>
+      </div>
+    </section>
   </main>
 
   <script src="./main.js"></script>
