--- a/fortune.html
+++ b/fortune.html
@@ -64,6 +64,26 @@
         </div>
       </div>
     </section>
+    <section class="guide reveal">
+      <div class="section-title">
+        <h2>운세 이용 안내</h2>
+        <p>12간지 운세는 참고용이며, 실제 선택과 판단은 사용자에게 있습니다.</p>
+      </div>
+      <div class="guide-grid">
+        <article>
+          <h3>매일 업데이트</h3>
+          <p>운세는 매일 00:00 기준으로 새롭게 갱신됩니다.</p>
+        </article>
+        <article>
+          <h3>행동 제안</h3>
+          <p>제안은 힌트로만 활용하고, 상황에 맞게 조정해 주세요.</p>
+        </article>
+        <article>
+          <h3>과몰입 주의</h3>
+          <p>운세는 삶을 대신하지 않습니다. 스스로의 기준을 우선하세요.</p>
+        </article>
+      </div>
+    </section>
   </main>
 
   <script src="./main.js"></script>
