--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
       </div>
     </section>
 
+    <section id="about" class="guide reveal">
+      <div class="section-title">
+        <h2>몽문서 소개</h2>
+        <p>꿈 기록, 상징 해석, 운세를 한 곳에 모아 스스로의 흐름을 점검할 수 있게 돕습니다.</p>
+      </div>
+      <div class="guide-grid">
+        <article>
+          <h3>몽상 기록</h3>
+          <p>장면과 감정을 글로 남기면 반복되는 패턴과 메시지가 더 또렷해집니다.</p>
+        </article>
+        <article>
+          <h3>상징 기반 해독</h3>
+          <p>상징 카테고리를 참고해 스스로의 맥락을 붙이면 해석이 정교해집니다.</p>
+        </article>
+        <article>
+          <h3>오늘의 운세</h3>
+          <p>12간지와 별자리는 참고용으로 제공되며, 결정은 사용자에게 있습니다.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="glossary reveal">
+      <div class="section-title">
+        <h2>자주 묻는 질문</h2>
+        <p>서비스 이용 시 가장 많이 궁금해하는 내용을 정리했습니다.</p>
+      </div>
+      <div class="glossary-grid">
+        <article>
+          <h3>해독은 과학인가요?</h3>
+          <p>해석은 참고용이며, 자기 이해와 정리에 목적이 있습니다.</p>
+        </article>
+        <article>
+          <h3>기록은 어디에 저장되나요?</h3>
+          <p>기기 내 브라우저 저장소에 보관되며, 삭제 시 복구되지 않습니다.</p>
+        </article>
+        <article>
+          <h3>운세는 어떻게 바뀌나요?</h3>
+          <p>매일 00:00 기준으로 갱신되는 오늘의 흐름을 제공합니다.</p>
+        </article>
+      </div>
+    </section>
+
     <section id="symbols" class="symbols reveal">
       <div class="section-title">
         <h2>상징서: 자주 등장하는 기호</h2>
