Add zodiac and astrology icons

--- a/astro.html
+++ b/astro.html
@@ -45,18 +45,18 @@
         <div class="fortune-controls">
           <p class="fortune-label">별자리 선택</p>
           <div class="animal-chips" role="listbox" aria-label="별자리 선택">
-            <button class="chip-button astro-chip" type="button" data-astro="양자리" role="option" aria-selected="false">양자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="황소자리" role="option" aria-selected="false">황소자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="쌍둥이자리" role="option" aria-selected="false">쌍둥이자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="게자리" role="option" aria-selected="false">게자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="사자자리" role="option" aria-selected="false">사자자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="처녀자리" role="option" aria-selected="false">처녀자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="천칭자리" role="option" aria-selected="false">천칭자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="전갈자리" role="option" aria-selected="false">전갈자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="사수자리" role="option" aria-selected="false">사수자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="염소자리" role="option" aria-selected="false">염소자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="물병자리" role="option" aria-selected="false">물병자리</button>
-            <button class="chip-button astro-chip" type="button" data-astro="물고기자리" role="option" aria-selected="false">물고기자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="양자리" role="option" aria-selected="false">♈ 양자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="황소자리" role="option" aria-selected="false">♉ 황소자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="쌍둥이자리" role="option" aria-selected="false">♊ 쌍둥이자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="게자리" role="option" aria-selected="false">♋ 게자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="사자자리" role="option" aria-selected="false">♌ 사자자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="처녀자리" role="option" aria-selected="false">♍ 처녀자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="천칭자리" role="option" aria-selected="false">♎ 천칭자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="전갈자리" role="option" aria-selected="false">♏ 전갈자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="사수자리" role="option" aria-selected="false">♐ 사수자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="염소자리" role="option" aria-selected="false">♑ 염소자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="물병자리" role="option" aria-selected="false">♒ 물병자리</button>
+            <button class="chip-button astro-chip" type="button" data-astro="물고기자리" role="option" aria-selected="false">♓ 물고기자리</button>
           </div>
         </div>
         <div id="astroResult" class="fortune-result">
