--- a/fortune.html
+++ b/fortune.html
@@ -45,18 +45,18 @@
         <div class="fortune-controls">
           <p class="fortune-label">띠 선택</p>
           <div class="animal-chips" role="listbox" aria-label="띠 선택">
-            <button class="chip-button" type="button" data-animal="쥐" role="option" aria-selected="false">쥐</button>
-            <button class="chip-button" type="button" data-animal="소" role="option" aria-selected="false">소</button>
-            <button class="chip-button" type="button" data-animal="호랑이" role="option" aria-selected="false">호랑이</button>
-            <button class="chip-button" type="button" data-animal="토끼" role="option" aria-selected="false">토끼</button>
-            <button class="chip-button" type="button" data-animal="용" role="option" aria-selected="false">용</button>
-            <button class="chip-button" type="button" data-animal="뱀" role="option" aria-selected="false">뱀</button>
-            <button class="chip-button" type="button" data-animal="말" role="option" aria-selected="false">말</button>
-            <button class="chip-button" type="button" data-animal="양" role="option" aria-selected="false">양</button>
-            <button class="chip-button" type="button" data-animal="원숭이" role="option" aria-selected="false">원숭이</button>
-            <button class="chip-button" type="button" data-animal="닭" role="option" aria-selected="false">닭</button>
-            <button class="chip-button" type="button" data-animal="개" role="option" aria-selected="false">개</button>
-            <button class="chip-button" type="button" data-animal="돼지" role="option" aria-selected="false">돼지</button>
+            <button class="chip-button" type="button" data-animal="쥐" role="option" aria-selected="false">🐭 쥐</button>
+            <button class="chip-button" type="button" data-animal="소" role="option" aria-selected="false">🐮 소</button>
+            <button class="chip-button" type="button" data-animal="호랑이" role="option" aria-selected="false">🐯 호랑이</button>
+            <button class="chip-button" type="button" data-animal="토끼" role="option" aria-selected="false">🐰 토끼</button>
+            <button class="chip-button" type="button" data-animal="용" role="option" aria-selected="false">🐲 용</button>
+            <button class="chip-button" type="button" data-animal="뱀" role="option" aria-selected="false">🐍 뱀</button>
+            <button class="chip-button" type="button" data-animal="말" role="option" aria-selected="false">🐴 말</button>
+            <button class="chip-button" type="button" data-animal="양" role="option" aria-selected="false">🐑 양</button>
+            <button class="chip-button" type="button" data-animal="원숭이" role="option" aria-selected="false">🐵 원숭이</button>
+            <button class="chip-button" type="button" data-animal="닭" role="option" aria-selected="false">🐔 닭</button>
+            <button class="chip-button" type="button" data-animal="개" role="option" aria-selected="false">🐶 개</button>
+            <button class="chip-button" type="button" data-animal="돼지" role="option" aria-selected="false">🐷 돼지</button>
           </div>
         </div>
         <div id="fortuneResult" class="fortune-result">
