--- a/fortune.html
+++ b/fortune.html
@@ -27,11 +27,13 @@
       <a href="interpret.html">해독</a>
       <a href="fortune.html">12간지</a>
       <a href="astro.html">별자리</a>
+      <a href="love.html">애정운</a>
       <a href="index.html#symbols">상징서</a>
       <a href="index.html#ritual">의식</a>
       <a href="index.html#guide">가이드</a>
       <a href="index.html#glossary">키워드</a>
       <a href="index.html#cases">사례</a>
+      <a href="index.html#policy">정책</a>
     </nav>
   </header>
 
@@ -83,6 +85,27 @@
           <p>운세는 삶을 대신하지 않습니다. 스스로의 기준을 우선하세요.</p>
         </article>
       </div>
+    </section>
+    <section class="policy reveal">
+      <div class="section-title">
+        <h2>정책 안내</h2>
+        <p>운세는 참고용이며 자세한 정책은 메인 페이지에서 확인할 수 있습니다.</p>
+      </div>
+      <div class="policy-grid">
+        <article>
+          <h3>콘텐츠 안내</h3>
+          <p>운세는 자기 점검을 돕는 참고 정보이며, 중요한 결정은 본인의 판단이 우선입니다.</p>
+        </article>
+        <article>
+          <h3>저장 방식</h3>
+          <p>개인 입력 데이터는 브라우저에만 저장되며 외부 서버로 전송되지 않습니다.</p>
+        </article>
+        <article>
+          <h3>문의</h3>
+          <p>문의: ajejdps12@gmail.com</p>
+        </article>
+      </div>
+      <p class="muted"><a href="index.html#policy">정책 자세히 보기</a></p>
     </section>
   </main>
 
