--- a/interpret.html
+++ b/interpret.html
@@ -27,11 +27,13 @@
       <a href="interpret.html">해독</a>
       <a href="fortune.html">12간지</a>
       <a href="astro.html">별자리</a>
+      <a href="love.html">애정운</a>
       <a href="index.html#symbols">상징서</a>
       <a href="index.html#ritual">의식</a>
       <a href="index.html#guide">가이드</a>
       <a href="index.html#glossary">키워드</a>
       <a href="index.html#cases">사례</a>
+      <a href="index.html#policy">정책</a>
     </nav>
   </header>
 
@@ -95,6 +97,27 @@
           <p>기록은 브라우저에 저장되며, 기기 변경 시 이어지지 않습니다.</p>
         </article>
       </div>
+    </section>
+    <section class="policy reveal">
+      <div class="section-title">
+        <h2>정책 안내</h2>
+        <p>꿈 기록과 해석은 참고용이며 자세한 정책은 메인 페이지에서 확인할 수 있습니다.</p>
+      </div>
+      <div class="policy-grid">
+        <article>
+          <h3>콘텐츠 안내</h3>
+          <p>해석은 자기 이해를 돕는 참고 정보이며 의료·상담을 대체하지 않습니다.</p>
+        </article>
+        <article>
+          <h3>저장 방식</h3>
+          <p>기록은 브라우저에 저장되며, 기기 변경 시 이어지지 않습니다.</p>
+        </article>
+        <article>
+          <h3>문의</h3>
+          <p>문의: ajejdps12@gmail.com</p>
+        </article>
+      </div>
+      <p class="muted"><a href="index.html#policy">정책 자세히 보기</a></p>
     </section>
   </main>
 
