--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="interpret.html">해독</a>
       <a href="fortune.html">12간지</a>
       <a href="astro.html">별자리</a>
+      <a href="love.html">애정운</a>
       <a href="#symbols">상징서</a>
       <a href="#ritual">의식</a>
       <a href="#guide">가이드</a>
@@ -48,6 +49,7 @@
           <a class="btn hero-link" href="interpret.html">몽상 기록 시작</a>
           <a class="btn hero-link" href="fortune.html">오늘의 12간지 운세</a>
           <a class="btn hero-link" href="astro.html">오늘의 별자리 운세</a>
+          <a class="btn hero-link" href="love.html">이름 애정운</a>
         </div>
       </div>
       <div class="hero-card reveal">
