Update hero button text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           예언이 아닌, 내면의 그림자를 비추는 의식적 기록입니다.
         </p>
         <div class="hero-actions">
-          <a class="btn hero-link" href="interpret.html">몽상 기록 시작</a>
+          <a class="btn hero-link" href="interpret.html">꿈기억 기록시작</a>
           <a class="btn hero-link" href="fortune.html">오늘의 12간지 운세</a>
           <a class="btn hero-link" href="astro.html">오늘의 별자리 운세</a>
           <a class="btn hero-link" href="love.html">이름 애정운</a>
